--- a/app/src/main/res/navigation/chat_navigation.xml
+++ b/app/src/main/res/navigation/chat_navigation.xml
@@ -3,9 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/chat_navigation"
     app:startDestination="@id/chatFragment">
-
     <fragment
         android:id="@+id/chatFragment"
         android:name="com.example.fragments.fragments.ChatFragment"
-        android:label="ChatFragment" />
+        android:label="ChatFragment" >
+        <action
+            android:id="@+id/action_chatFragment_self"
+            app:destination="@id/chatFragment" />
+        <argument
+            android:name="count"
+            app:argType="integer" />
+    </fragment>
 </navigation>
