--- a/app/src/main/res/navigation/dict_navigation.xml
+++ b/app/src/main/res/navigation/dict_navigation.xml
@@ -3,9 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/dict_navigation"
     app:startDestination="@id/dictFragment">
-
     <fragment
         android:id="@+id/dictFragment"
         android:name="com.example.fragments.fragments.DictFragment"
-        android:label="DictFragment" />
+        android:label="DictFragment" >
+        <action
+            android:id="@+id/action_dictFragment_self"
+            app:destination="@id/dictFragment" />
+        <argument
+            android:name="count"
+            app:argType="integer" />
+    </fragment>
 </navigation>
