--- a/app/src/main/res/layout/fragment_dict.xml
+++ b/app/src/main/res/layout/fragment_dict.xml
@@ -6,8 +6,19 @@
     android:background="@color/colorAccent">
 
     <TextView
-        android:id="@+id/numberr"
+        android:id="@+id/dict_num"
         android:background="@color/colorAccent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <Button
+        android:id="@+id/dict_but"
+        android:background="#E91E63"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
@@ -15,4 +26,5 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
