--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,4 +21,17 @@
         android:background="@color/color_primary"
         app:menu="@menu/menu" />
 
+    <Button
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:text="back"
+        android:onClick="onBackPressed"
+        app:layout_constraintVertical_bias="0.25"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+    </Button>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
